# DyerAI7

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  deployment.md
scripts/: init_db.py  seed_memory.py  start_dev.sh
src/ai_engineer/: __init__.py  config.py  main.py
src/ai_engineer/agents/: base.py  data_engineer.py  deployer.py  evaluator.py  model_architect.py  trainer.py
src/ai_engineer/api/: deps.py  schemas.py  server.py  websocket.py
src/ai_engineer/api/routes/: datasets.py  deployment.py  evaluation.py  future.py  models.py  projects.py  system.py  tasks.py  training.py
src/ai_engineer/ci/: tasks.py  workflows.py
src/ai_engineer/core/: __init__.py  llm.py  memory.py  orchestrator.py  planner.py  reflector.py  router.py
src/ai_engineer/db/: models.py  session.py
src/ai_engineer/db/migrations/: 001_init.sql
src/ai_engineer/future/: __init__.py
src/ai_engineer/future/agent_mesh/: __init__.py  a2a_protocol.py  coordinator.py  shared_memory.py
src/ai_engineer/future/alignment/: __init__.py  online_dpo.py  rlaif.py  simpo.py
src/ai_engineer/future/architectures/: __init__.py  consistency_model.py  dit_diffusion.py  flow_matching.py  mamba.py  mixture_of_experts.py  rwkv.py
src/ai_engineer/future/eval/: __init__.py  llm_judge.py
src/ai_engineer/future/optimization_v2/: __init__.py  moe_distill.py  sub_bit.py
src/ai_engineer/future/privacy/: __init__.py  differential_privacy.py  federated.py  secure_aggregation.py
src/ai_engineer/future/reasoning/: __init__.py  constitutional_ai.py  graph_of_thought.py  mcts_reasoner.py  process_reward_model.py  reflexion.py  self_consistency.py  self_refine.py  (+1 more)
src/ai_engineer/memory/: graph_store.py  skill_bank.py  trajectory_store.py  vector_store.py
src/ai_engineer/ml/: __init__.py
src/ai_engineer/pipelines/: __init__.py  data_pipeline.py  deployment_pipeline.py  eval_pipeline.py  training_pipeline.py
src/ai_engineer/tools/: __init__.py  dataset_loader.py  experiment_tracker.py  file_ops.py  git_ops.py  inference.py  ml_tools.py  registry.py  sandbox.py  search.py  shell.py  training.py
src/ai_engineer/ui/: app.py  state.py
src/ai_engineer/utils/: errors.py  logging.py  prompts.py  retry.py
tests/: conftest.py  test_agents.py  test_api.py  test_llm.py  test_memory.py  test_orchestrator.py  test_pipelines.py  test_router.py  test_sandbox.py
(+97 files in other folders)
