# Copyright 2026 Matt Dyer / Dyer-Tech
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineer"
version = "1.0.0"
description = "Autonomous AI Engineering System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "qdrant-client>=1.8",
    "neo4j>=5.20",
    "openai>=1.30",
    "anthropic>=0.25",
    "litellm>=1.40",
    "tenacity>=8.2",
    "structlog>=24.1",
    "rich>=13.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "peft>=0.10",
    "trl>=0.9",
    "accelerate>=0.29",
    "bitsandbytes>=0.43",
    "unsloth>=2024.4",
    "vllm>=0.4",
    "wandb>=0.16",
    "mlflow>=2.12",
    "e2b-code-interpreter>=0.0.10",
    "modal>=0.60",
    "docker>=7.0",
    "GitPython>=3.1",
    "PyYAML>=6.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.33",
    "streamlit-chat>=0.1",
    "streamlit-aggrid>=0.3",
    "plotly>=5.20",
    "altair>=5.2",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.optional-dependencies]
dev = ["ipython>=8.22", "debugpy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
